src/test/deca/context/invalid/created/rule3.22/nobool.deca
// Résultat erreur:
//    16:12
//    Condition non booléenne dans 'if' (règle 3.22)

class MaClasse {
    void maMethode() {
        int x = 5;
        if (x) { 
        }
    }
}